# ruversi

./: .gitignore  Cargo.toml  ReadMe.md  evaltable.txt  evaltable.txt.old
.cargo/: config.toml
.github/workflows/: duel.yml  dueledax.yml  rust.yml  test.yml
benches/: my_benchmark.rs
data/: evaltable.txt  evaltable.txt.old  initialpos.eq1.txt  initialpos.eq10.txt  initialpos.eq11.txt  initialpos.eq12.txt  initialpos.eq14.txt  initialpos.eq2.txt  initialpos.eq3.txt  initialpos.eq4.txt  initialpos.eq5.txt  initialpos.eq6.txt  initialpos.eq7.txt  initialpos.eq8.txt  initialpos.eq9.txt  initialpos.seven.txt  initialpos.txt
docs/: duelsummary.html  index.html  rfen2obf.html  ttest.html  weightvisualizer.html
src/: bitboard.rs  board.rs  byteboard.rs  cassio.rs  duelresult.rs  edaxrunner.rs  extractrfen.rs  game.rs  gtprotocol.rs  initialpos.rs  kifu.rs  lib.rs  main.rs  myoption.rs  node.rs  nodebb.rs  shnode.rs  trainer.rs  transptable.rs  weight.rs  weightsoftsign.rs
tools/: edaxconfig.txt  footer.txt  header.txt  ikkatsu.ps1  ikkatsu.rb  learncheck.ps1  learncheck.sh  runspeedcheck.rb  speedcheck.ps1  speedcheck.rb  speedcheck.sh  summaryduel.rb
