[package]
name = "ruversi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"
once_cell = "1.12"

[features]
default = ["bitboard"]
nosimd = []
nnv1 = []
nnv2 = []
# nnv3 = []
withtt = []  # use transposition table
bitboard = []
byteboard = []
