[package]
name = "ruversi"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"
once_cell = "1.12"
regex = "1"
aligned-vec = "0.6.4"

[features]
default = []
nosimd = []
nnv1 = []
nnv2 = []
nnv3 = []
nnv4 = []
# nnv5 = []
withtt = []  # use transposition table
# bitboard = []
# deprecated  byteboard = []
avx = [] ## including AVX and BMI2

[lib]
name="mylib"
path="src/lib.rs"

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports"]}

[[bench]]
name = "my_benchmark"
harness = false
